--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
     <h2>Contact Form</h2>
     <form id="contactForm" onsubmit="return validateForm()">
       <div class="form-group">
-        <label for="name">Name (Required)</label>
+        <label for="name">phone (Required)</label>
         <input type="text" id="name" name="name">
         <div class="error-message" id="nameError">Name is required.</div>
       </div>
