--- a/index (7).html
+++ b/index (7).html
@@ -52,7 +52,7 @@
        
         <form onsubmit="return data()" action="submit.html" target="_blank">
 
-            UserId: <input type="text" placeholder="user" id="id1"><br><br>
+            Name: <input type="text" placeholder="user" id="id1"><br><br>
 
             Contact: <input type="Number" placeholder="contact" id="id2"><br><br>
 
